# sql-schema-diff

./: Cargo.toml  README.md  schema-diff-integration-test.md  schema-diff-integration-test.sql
docs/superpowers/plans/: 2026-04-15-mysql-schema-diff.md  2026-04-15-scoping-and-sql-sync.md  2026-04-20-insert-checker.md
docs/superpowers/specs/: 2026-04-15-schema-diff-design.md  2026-04-15-scoping-and-sql-sync-design.md  2026-04-20-insert-checker-design.md
src/: config.rs  differ.rs  fetcher.rs  main.rs  reporter.rs  sql_generator.rs
src/insert_checker/: checker.rs  meta_fetcher.rs  mod.rs  parser.rs  reporter.rs
src/schema/: mod.rs
